--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "4.*",
-        "php-mqtt/laravel-client": "^1.3"
+        "php-mqtt/laravel-client": "^1.3",
+        "yajra/laravel-datatables-oracle": "10.*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
